<resources>
    <string name="app_name">MDM</string>
    <string name="queue">Queue</string>
    <string name="finished">Finished</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_icon">File Icon</string>
    <string name="open">Open</string>
    <string name="delete">Delete Item</string>
    <string name="enter_url">Enter URL</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="statsicon">StatsIcon</string>
    <string name="_0">0</string>
    <string name="downloaded_icon">Downloaded Icon</string>
    <string name="queue_icon">Queue Icon</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="cell_speed">Cell Speed</string>
    <string name="clipboard_not_url">No valid URL detected</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="save_to_default">Default Location</string>
    <string name="clear_finished">Clear finished</string>
    <string name="clear_amp_delete_files"><![CDATA[Clear & delete files]]></string>
    <string name="_3">3</string>
</resources>