<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/deleteCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ItemBG"
        app:cardCornerRadius="17dp"
        app:cardElevation="4dp">

    <RelativeLayout
        android:id="@+id/bgPane"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/holo_red_dark"
        android:paddingEnd="8dp"
        android:paddingStart="8dp">

        <LinearLayout
            android:id="@+id/deleteAction"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:background="@android:color/holo_red_dark">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/trash"
                app:tint="@android:color/white"
                android:contentDescription="@string/delete"/>
        </LinearLayout>
    </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/foregroundCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ItemBG"
        android:clickable="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="12dp">

            <ImageView
                android:id="@+id/fileIcon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:scaleType="centerInside"
                android:src="@drawable/file"
                app:tint="@color/Completed"
                android:contentDescription="@string/file_icon"/>

            <TextView
                android:id="@+id/openText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/open"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/MenuItems"/>

            <TextView
                android:id="@+id/fileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/fileIcon"
                android:layout_toStartOf="@id/openText"
                android:layout_marginStart="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="MyFile.zip"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fileMeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fileName"
                android:layout_alignStart="@id/fileName"
                android:layout_toStartOf="@id/openText"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Size: --"
                android:textColor="@color/MenuItems"
                android:textSize="13sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
